partner wrap correction

--- a/src/assets/sass/modules/_partners.sass
+++ b/src/assets/sass/modules/_partners.sass
@@ -34,6 +34,11 @@
       width: 1px
       background: #dfdfdf
 
++respond-above('lg')
+  .partners
+    +e('wrap')
+      width: 85%
+
 +respond-above('xlg')
   .partners
     +e('wrap')
