--- a/src/assets/sass/utils/_base.sass
+++ b/src/assets/sass/utils/_base.sass
@@ -9,7 +9,7 @@
 
 +respond-above('lg')
   .wrap
-    width: 85%
+    width: 80%
 
 
 +respond-above('xlg')
